--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -51,16 +51,13 @@ jobs:
     runs-on: windows-latest 
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+  
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2 
       with:
-        fetch-depth: 0
-
-    # Install the .NET Core workload
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
+        dotnet-version: 6.0-x
+    
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Install MAUI workload
       run: dotnet workload install maui
