--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,5 +23,15 @@ jobs:
    
     - name:  Install MAUI workload
       run: dotnet workload install maui
+    - name: Decrypt PFX File 
+      run: |
+       echo "${{ secrets.WINDOWS_PFX_FILE }}" › cert.pfx.asc
+       certutil -decode cert.pfx.as cert.pfx
+    - name: Add Cert to Store
+      run: certutil -user -q -p ${{ secrets.WINDOWS PFX PASSWORD }} - importpfx cert.pfx NoRoot
     - name: Build
-      run: dotnet build DemoMaui.csproj -c Release -f:net7.0-windows10.0.19041.0
+      run: dotnet publish DemoMaui.csproj -c Release -f:net7.0-windows10.0.19041.0 /p:GenerateppxPackageOnBuild-true /p:AppxPackagesigningEnabled-true /p:PackageCertificateThumbprint="{{secrets.WINDOWS_PFX_THUMBPRINT}}"
+    - name: Uoload Build Artifacts 
+      uses: actions/upload-artifact@v3.1.0 
+      with:
+        path: .\**\ApoPackages\**\*.*
