--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Decrypt PFX File 
       run: |
        echo "${{ secrets.WINDOWS_PFX_FILE }}" › cert.pfx.asc
-       certutil -decode cert.pfx.as cert.pfx
+       certutil -decode cert.pfx.asc cert.pfx
     - name: Add Cert to Store
       run: certutil -user -q -p ${{ secrets.WINDOWS PFX PASSWORD }} - importpfx cert.pfx NoRoot
     - name: Build
