--- a/.github/workflows/newdotnet.yml
+++ b/.github/workflows/newdotnet.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Upload Build Artifacts 
       uses: actions/upload-artifact@v3.1.0 
       with:
-        path: .\**\ApoPackages\**\*.*
+        path: ./**/*.msix
