--- a/.github/workflows/certificate.yml
+++ b/.github/workflows/certificate.yml
@@ -28,7 +28,7 @@ jobs:
        echo "${{ secrets.WINDOWS_PFX_FILE }}" › cert.pfx.asc
        certutil -decode cert.pfx.asc cert.pfx 
     - name: Add Cert to Store
-      run: Import-PfxCertificate -FilePath cert.pfx -CertStoreLocation Cert:\CurrentUser\My -Password (ConvertTo-SecureString -String $env:WINDOWS_PFX_PASSWORD -Force -AsPlainText
+      run: Import-PfxCertificate -FilePath cert.pfx -CertStoreLocation Cert:\CurrentUser\My -Password (ConvertTo-SecureString -String $env:WINDOWS_PFX_PASSWORD) -Force -AsPlainText
     - name: Build
       run: dotnet publish ClickFreeMaui.csproj -c Release -f:net6.0-windows10.0.19041.0 /p:GenerateppxPackageOnBuild=true /p:AppxPackagesigningEnabled=true /p:PackageCertificateThumbprint="{{secrets.WINDOWS_PFX_THUMBPRINT}}"
     - name: Upload Build Artifacts 
