--- a/.github/workflows/certificate.yml
+++ b/.github/workflows/certificate.yml
@@ -28,9 +28,13 @@ jobs:
        echo "${{ secrets.WINDOWS_PFX_FILE }}" › cert.pfx.asc
        certutil -decode cert.pfx.asc cert.pfx 
     - name: Add Cert to Store
-      run: Import-PfxCertificate -FilePath cert.pfx -CertStoreLocation Cert:\CurrentUser\My -Password (ConvertTo-SecureString -String $env:WINDOWS_PFX_PASSWORD -Force -AsPlainText)
+      run:  New-Item -ItemType directory -Path certificate
+           Set-Content -Path cert.pfx -Value $env:WINDOWS_CERTIFICATE
+           certutil -decode cert.pfx.asc cert.pfx
+           Remove-Item -path certificate -include tempCert.txt
+           Import-PfxCertificate -FilePath cert.pfx -CertStoreLocation Cert:\CurrentUser\My -Password (ConvertTo-SecureString -String $env:WINDOWS_CERTIFICATE_PASSWORD -Force -AsPlainText)
     - name: Build
-      run: dotnet publish ClickFreeMaui.csproj -c Release -f:net6.0-windows10.0.19041.0 /p:GenerateppxPackageOnBuild=true /p:AppxPackagesigningEnabled=true /p:PackageCertificateThumbprint="{{secrets.WINDOWS_PFX_THUMBPRINT}}"
+      run: dotnet publish ClickFreeMaui.csproj -c Release -f:net6.0-windows10.0.19041.0 /p:GenerateppxPackageOnBuild=true /p:AppxPackagesigningEnabled=true 
     - name: Upload Build Artifacts 
       uses: actions/upload-artifact@v3.1.0
       with:
