--- a/.github/workflows/newdotnet.yml
+++ b/.github/workflows/newdotnet.yml
@@ -20,7 +20,9 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 7.0.x
-   
+    - name: Restore dependencies
+      run: dotnet restore
+      
     - name:  Install MAUI workload
       run: dotnet workload install maui
     - name: Decrypt PFX File
